--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,11 @@
     <string name="return_btn">Input Room Dimensions</string>
 
     <string name="interior_surface_area_text">Interior surface area:</string>
+    <string name="feet">feet</string>
     <string name="gallons_needed_text">Gallons needed:</string>
 
-    <string name="estimated_paint">Estimated Paint Required: 0.0 gallons</string>
+    <string name="estimated_paint">Estimated Paint Required:</string>
+    <string name="gallons_lower">gallons</string>
 
     <!-- HELP TEXT -->
     <string name="help_text">
