--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,9 @@
     <string name="estimated_paint">Estimated Paint Required:</string>
     <string name="gallons_lower">gallons</string>
 
-    <string name=""></string>
-    <string name=""></string>
-    <string name=""></string>
+    <string name="test1">1</string>
+    <string name="test2">2</string>
+    <string name="test3">3</string>
 
 
     <!-- HELP TEXT -->
